--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "jspm": {
     "configFile": "src/js/config.js",
     "dependencies": {
+      "d3": "npm:d3@^4.10.0",
+      "d3-svg-annotation": "npm:d3-svg-annotation@^2.0.0",
       "guardian/iframe-messenger": "github:guardian/iframe-messenger@master",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "reqwest": "github:ded/reqwest@^1.1.5",
